--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "dependencies": {
     "coffee-script": "^1.8.0",
     "express": "~4.10.8",
+    "getenv": "^0.5.0",
     "inherits": "2.0.1",
     "livedb": "0.4.11",
     "livedb-mongo": "0.4.1",
+    "newrelic": "~1.15.1",
     "share": "0.7.3",
-    "ws": "0.6.4",
-    "http": "0.0.0",
-    "newrelic": "~1.15.1"
+    "ws": "0.6.4"
   },
   "devDependencies": {},
   "scripts": {
