--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "newrelic": "~1.15.1",
     "share": "0.7.3",
     "ws": "0.6.4",
-    "keen-js": "~3.2.3"
+    "keen-js": "~3.2.3",
+    "geoip-lite": "~1.1.5"
   },
   "devDependencies": {},
   "scripts": {
